fix: align TavNav content to bottom (flex-end)

--- a/src/components/menus/TabNav/TabNav.sass
+++ b/src/components/menus/TabNav/TabNav.sass
@@ -9,7 +9,7 @@
 
 	.TabNav_Items
 		flex-shrink: 0
-		align-self: flex-start
+		align-self: flex-end
 
 		> *
 			display: inline-block
